<resources>
    <string name="app_name">Network Debug Assistant</string>

    <!-- 普通常用文本 -->
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="notice">注意</string>
    <string name="prompt">提示</string>
    <string name="delete">删除</string>
    <string name="modify">编辑</string>
    <string name="save">保存</string>
    <string name="execute">执行</string>
    <string name="copy">复制</string>
    <string name="setting">设置</string>

    <!-- MainActivity -->
    <string name="main_tittle">网络调试助手 - DL</string>
    <string name="main_udp_broad">UDP广播</string>
    <string name="main_udp_multi">UDP组播</string>
    <string name="main_tcp_client">TCP客户端</string>
    <string name="main_tcp_server">TCP服务器</string>
    <string name="main_ping">ping指令</string>

    <!-- SettingActivity -->
    <string name="setting_tittle">设置</string>
    <string name="setting_version">版本信息</string>

    <!-- BaseSendReceiveActivity -->
    <string name="clean">清除</string>
    <string name="history">历史</string>
    <string name="send">发送</string>
    <string name="local_ip_address">本机IP：</string>
    <string name="disconnect">断开</string>

    <!-- UdpBroadSettingActivity -->
    <string name="udp_broad_setting_tittle">UDP广播配置</string>
    <string name="setting_internet">网络设置</string>
    <string name="local_port">本地端口</string>
    <string name="target_ip_address">目标地址</string>
    <string name="target_port">目标端口</string>
    <string name="setting_send">发送设置</string>
    <string name="setting_is_hex">Ascii / Hex</string>
    <string name="setting_is_auto_add_check">是否自动添加校验位</string>
    <string name="setting_is_auto_send_loop">是否自动循环发送</string>
    <string name="setting_auto_send_loop_time">循环发送间隔时间（毫秒）</string>
    <string name="setting_receive">接收设置</string>
    <string name="setting_is_show_time">是否显示接收时间</string>
    <string name="setting_is_show_ip_address">是否显示IP地址</string>
    <string name="setting_is_show_port">是否显示端口</string>
    <string name="setting_local_save_path">本地存储地址</string>
    <string name="setting_is_auto_save_local">是否自动保存接收数据到本地</string>
    <string name="please_input_port">请输入端口号</string>
    <string name="input_port_can_not_empty">端口号不能为空</string>
    <string name="input_port_can_not_over_range">端口号范围为0～65535</string>
    <string name="please_input_ip_address">请输入IP地址（eg: 255.255.255.255）</string>
    <string name="input_ip_address_wrong_format">IP地址格式不正确</string>
    <string name="please_input_loop_time">请输入循环发送时间间隔 ms</string>
    <string name="input_loop_time_can_not_empty">循环发送时间间隔不能为空</string>
    <string name="input_loop_time_can_not_over_range">循环发送时间间隔范围为1～999999999</string>
    <string name="connect_ing">正在创建连接…</string>
    <string name="connect_cancel">已取消创建连接！</string>
    <string name="connect_success">连接成功！</string>
    <string name="connect_failed">连接失败！</string>
    <string name="disconnect_success">已断开连接!</string>
    <string name="disconnect_ing">正在断开连接…</string>
    <string name="copy_to_clip_success">已将接收文本复制到系统粘贴板！</string>

    <!-- UdpMultiSettingActivity -->
    <string name="udp_multi_setting_tittle">UDP组播配置</string>
    <string name="target_multi_ip_address">目标组播地址</string>
    <string name="please_input_multi_ip_address">请输入组播地址（224.0.0.0 ～ 239.255.255.255）</string>
    <string name="input_multi_ip_address_wrong_format">组播地址格式不正确</string>

    <!-- TcpClientSettingActivity -->
    <string name="tcp_client_setting_tittle">TCP客户端配置</string>
    <string name="server_ip_address">服务器地址</string>
    <string name="server_port">服务器端口</string>

    <!-- TcpServerActivity -->
    <string name="tcp_server_all_connect_socket">所有连接客户端</string>

    <!-- TcpServerSettingActivity -->
    <string name="tcp_server_setting_tittle">TCP服务器配置</string>

    <!-- SelectFolderActivity -->
    <string name="folder_tittle">选择存储路径</string>
    <string name="folder_son_num">个子项</string>
    <string name="folder_create_new_folder">创建新的文件夹</string>
    <string name="please_input_new_folder_name">请输入新的文件夹名称</string>
    <string name="input_new_folder_name_can_not_empty">文件夹名称不能为空</string>
    <string name="input_new_folder_name_can_not_over_range">文件夹名称长度最大为50个字符</string>
    <string name="folder_edit_tips">您可以对文件夹【**】进行如下操作</string>
    <string name="folder_edit_name">重命名</string>
    <string name="folder_edit_new_folder_name">重命名文件夹【**】</string>
    <string name="folder_delete_sure">您确定删除【**】文件夹吗？</string>

    <!-- HistoryActivity -->
    <string name="history_tittle">发送历史</string>
    <string name="history_edit_tips">您可以对历史发送文本【**】进行如下操作</string>

    <!-- PingActivity -->
    <string name="input_address_hint">请输入目标地址</string>
</resources>
