<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorActivityBackground"
        tools:context=".activity.PingActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@mipmap/icon_back"
            app:title="@string/main_ping"
            app:titleTextColor="@color/colorToolbarTittle" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/edt_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:drawable/editbox_background_normal"
                    android:backgroundTint="@color/colorItemBackground"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:lineSpacingExtra="8sp"
                    android:minLines="2"
                    android:text="www.github.com"
                    android:hint="@string/input_address_hint"
                    android:textColor="@color/colorTextNormal"
                    android:textSize="14sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/colorAccent"
                    android:onClick="sure"
                    android:text="@string/sure"
                    android:textSize="14sp"
                    android:textColor="@color/colorToolbarTittle"/>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@color/colorTextTittle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_receive"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@android:drawable/editbox_background_normal"
                    android:backgroundTint="@color/colorItemBackground"
                    android:enabled="true"
                    android:fadeScrollbars="false"
                    android:focusable="false"
                    android:gravity="start|top"
                    android:lineSpacingExtra="8sp"
                    android:longClickable="true"
                    android:scrollbarAlwaysDrawHorizontalTrack="true"
                    android:scrollbarAlwaysDrawVerticalTrack="true"
                    android:scrollbarStyle="outsideOverlay"
                    android:scrollbars="vertical"
                    android:textColor="@color/colorTextNormal"
                    android:textIsSelectable="false"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_receive_clean"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="clean"
                        android:text="@string/clean"
                        android:textColor="@color/colorTextTittle"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>