<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="isConnect"
            type="boolean" />
        <variable
            name="localIpAddress"
            type="String" />
        <variable
            name="isShowSocketList"
            type="boolean"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorActivityBackground"
        tools:context=".activity.UdpBroadActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@mipmap/icon_back"
            app:title="@string/main_udp_broad"
            app:titleTextColor="@color/colorToolbarTittle" />

        <ImageButton
            android:id="@+id/btn_setting"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:onClick="openSetting"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="@+id/toolbar"
            app:srcCompat="@mipmap/icon_menu" />

        <ImageButton
            android:id="@+id/btn_connect"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:onClick="connectOrNot"
            android:scaleType="centerInside"
            android:src='@mipmap/icon_connect'
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toStartOf="@+id/btn_setting"
            app:layout_constraintTop_toTopOf="@+id/toolbar" />

        <Spinner
            android:id="@+id/sp_socket"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/socket_spinner_bg"
            android:visibility="@{isShowSocketList? View.VISIBLE: View.GONE}"
            app:layout_constraintEnd_toStartOf="@+id/btn_disconnect"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <Button
            android:id="@+id/btn_disconnect"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@color/colorPrimary"
            android:text="@string/disconnect"
            android:textSize="14sp"
            android:textColor="@color/colorToolbarTittle"
            android:paddingBottom="10dp"
            android:onClick="disconnectSocket"
            android:visibility="@{isShowSocketList? View.VISIBLE: View.GONE}"
            app:layout_constraintStart_toEndOf="@+id/sp_socket"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sp_socket"
            app:layout_constraintBottom_toBottomOf="@+id/sp_socket"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sp_socket">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_local_ip_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text='@{@string/local_ip_address + localIpAddress}'
                    android:textColor="@color/colorTextHint"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_send"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:drawable/editbox_background_normal"
                    android:backgroundTint="@color/colorItemBackground"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:lineSpacingExtra="8sp"
                    android:minLines="2"
                    android:textColor="@color/colorTextNormal"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_send_clean"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="clean"
                        android:text="@string/clean"
                        android:textColor="@color/colorTextTittle"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/btn_send_history"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="openHistory"
                        android:text="@string/history"
                        android:textColor="@color/colorTextTittle"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/sw_loop"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:showText="true"
                        android:textColor="@color/colorTextTittle"
                        android:textOff="1"
                        android:textOn="∞" />

                    <Button
                        android:id="@+id/btn_send"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="@color/colorAccent"
                        android:onClick="send"
                        android:text="@string/send"
                        android:textColor="@color/colorToolbarTittle"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@color/colorTextTittle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_receive"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@android:drawable/editbox_background_normal"
                    android:backgroundTint="@color/colorItemBackground"
                    android:enabled="true"
                    android:fadeScrollbars="false"
                    android:focusable="false"
                    android:gravity="start|top"
                    android:lineSpacingExtra="8sp"
                    android:longClickable="true"
                    android:scrollbarAlwaysDrawHorizontalTrack="true"
                    android:scrollbarAlwaysDrawVerticalTrack="true"
                    android:scrollbarStyle="outsideOverlay"
                    android:scrollbars="vertical"
                    android:textColor="@color/colorTextNormal"
                    android:textIsSelectable="false"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_receive_clean"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="clean"
                        android:text="@string/clean"
                        android:textColor="@color/colorTextTittle"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/btn_copy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="copy"
                        android:text="@string/copy"
                        android:textColor="@color/colorTextTittle"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>